@@ -77,6 +77,7 @@ Mechanize is now under the MIT license
   * Content-Encoding: x-gzip is now treated like gzip per RFC 2616.
   * Mechanize now unescapes URIs for meta refresh.  GH #68
   * Mechanize now has more robust HTML charset detection.  GH #43
+  * Mechanize::Form::Textarea is now created from a textarea element.  GH #94
 
 === 1.0.0
 
